--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </button>
     </a>
 
-    <a href="https://sbs.co.kr" target="_blank" rel="noopener noreferrer">
+    <a href="sbs.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/SBS_logo.svg/80px-SBS_logo.svg.png" alt="SBS Logo" />
         SBS
