--- a/sbs.html
+++ b/sbs.html
@@ -37,13 +37,109 @@
       font-size: 28px;
     }
 
-    video {
+    /* Video wrapper and video */
+    .video-wrapper {
+      position: relative;
       width: 90%;
       max-width: 960px;
-      /* border removed */
+    }
+
+    video {
+      width: 100%;
       border-radius: 12px;
       background-color: #000;
-      margin-bottom: 15px;
+      user-select: none;
+      -webkit-user-drag: none;
+      pointer-events: auto;
+    }
+
+    /* Controls overlay */
+    #videoControls {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 8px 20px;
+      border-radius: 30px;
+      user-select: none;
+      transition: opacity 0.3s ease;
+      opacity: 1;
+    }
+
+    #videoControls.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    #videoControls button {
+      border: none;
+      background: transparent;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      padding: 5px 15px;
+      border-radius: 30px;
+      transition: background 0.3s;
+    }
+
+    #videoControls button:hover {
+      background: rgba(255, 255, 255, 0.2);
+    }
+
+    /* Volume slider styling */
+    #volumeSlider {
+      width: 100px;
+      cursor: pointer;
+      border-radius: 5px;
+      height: 6px;
+      background: #444;
+      -webkit-appearance: none;
+      appearance: none;
+      margin-left: 10px;
+      margin-right: 10px;
+      vertical-align: middle;
+      transition: background 0.3s;
+    }
+
+    #volumeSlider:hover {
+      background: #666;
+    }
+
+    /* Chrome, Safari, Opera */
+    #volumeSlider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 18px;
+      height: 18px;
+      background: white;
+      cursor: pointer;
+      border-radius: 50%;
+      border: none;
+      margin-top: -6px; /* center vertically */
+      transition: background 0.3s;
+    }
+
+    #volumeSlider::-webkit-slider-thumb:hover {
+      background: #ffcc00;
+    }
+
+    /* Firefox */
+    #volumeSlider::-moz-range-thumb {
+      width: 18px;
+      height: 18px;
+      background: white;
+      cursor: pointer;
+      border-radius: 50%;
+      border: none;
+      transition: background 0.3s;
+    }
+
+    #volumeSlider::-moz-range-thumb:hover {
+      background: #ffcc00;
     }
 
     .controls {
@@ -52,6 +148,7 @@
       gap: 10px;
       justify-content: center;
       margin-bottom: 20px;
+      margin-top: 15px;
     }
 
     select, .theme-toggle {
@@ -70,7 +167,7 @@
     }
 
     .theme-toggle {
-       position: fixed;
+      position: fixed;
       bottom: 20px;
       right: 20px;
       background: #444;
@@ -82,19 +179,22 @@
       font-size: 24px;
       z-index: 1000;
     }
-
-    /* Disable image drag */
-    img, video {
-      -webkit-user-drag: none;
-      pointer-events: auto;
-    }
   </style>
 </head>
 <body oncontextmenu="return false" onkeydown="return disableKeys(event)" ondragstart="return false">
   <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
   <h1>SBS Live Stream</h1>
-  <video id="video" controls autoplay></video>
+
+  <div class="video-wrapper" id="videoWrapper">
+    <video id="video" autoplay muted playsinline></video>
+    <div id="videoControls">
+      <button id="playPauseBtn">Pause</button>
+      <button id="volumeBtn">🔊</button>
+      <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1" />
+      <button id="fullscreenBtn">⛶</button>
+    </div>
+  </div>
 
   <div class="controls">
     <label>
@@ -115,7 +215,15 @@
     const qualitySelect = document.getElementById('qualitySelect');
     const serverSelect = document.getElementById('serverSelect');
     const themeBtn = document.querySelector('.theme-toggle');
+    const playPauseBtn = document.getElementById('playPauseBtn');
+    const fullscreenBtn = document.getElementById('fullscreenBtn');
+    const videoWrapper = document.getElementById('videoWrapper');
+    const videoControls = document.getElementById('videoControls');
+    const volumeBtn = document.getElementById('volumeBtn');
+    const volumeSlider = document.getElementById('volumeSlider');
+
     let hls;
+    let hideControlsTimeout;
 
     const sbsStreams = [
       { label: "SBS Server 1", url: "https://live-114.myjktv.com/playlist/live.m3u8?sid=k5KrPzDHWVrhHaRwhBeyDfOFUb8C5Oo9jag24idG&secret=3ba6d615f2eaddcf45631405611103ab&time=1747582294" },
@@ -171,23 +279,138 @@
             }
           });
 
-          video.play();
+          video.play().catch(() => {
+            // Auto-play might be blocked on some browsers, ignore error
+          });
         });
 
-        qualitySelect.addEventListener('change', () => {
+        qualitySelect.onchange = () => {
           const selected = parseInt(qualitySelect.value);
           hls.currentLevel = selected;
-        });
+        };
 
       } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
         video.src = stream.url;
         alert("Native HLS support: Quality selection unavailable.");
-        video.play();
+        video.play().catch(() => {});
       } else {
         alert("HLS not supported on this browser.");
       }
     }
 
+    // Play/pause toggle
+    playPauseBtn.addEventListener('click', () => {
+      if (video.paused) {
+        video.play();
+        playPauseBtn.textContent = '►';
+      } else {
+        video.pause();
+        playPauseBtn.textContent = '❚❚';
+      }
+    });
+
+    video.addEventListener('❚❚', () => {
+      playPauseBtn.textContent = '►';
+    });
+    video.addEventListener('►', () => {
+      playPauseBtn.textContent = '❚❚';
+    });
+
+    // Fullscreen toggle
+    fullscreenBtn.addEventListener('click', async () => {
+      if (!document.fullscreenElement) {
+        try {
+          await videoWrapper.requestFullscreen();
+
+          if (screen.orientation && screen.orientation.lock) {
+            await screen.orientation.lock('landscape').catch(() => {});
+          }
+
+          startHideControlsTimer();
+        } catch (err) {
+          console.error('Fullscreen or orientation lock failed:', err);
+        }
+      } else {
+        if (screen.orientation && screen.orientation.unlock) {
+          screen.orientation.unlock();
+        }
+        await document.exitFullscreen();
+        showControls();
+        clearTimeout(hideControlsTimeout);
+      }
+    });
+
+    // Volume button toggle mute/unmute
+    volumeBtn.addEventListener('click', () => {
+      video.muted = !video.muted;
+      if (video.muted) {
+        volumeSlider.value = 0;
+      } else {
+        volumeSlider.value = video.volume;
+      }
+      updateVolumeIcon();
+    });
+
+    // Volume slider control
+    volumeSlider.addEventListener('input', () => {
+      const val = parseFloat(volumeSlider.value);
+      video.volume = val;
+      video.muted = val === 0;
+      updateVolumeIcon();
+    });
+
+    // Sync slider and icon on volume change
+    video.addEventListener('volumechange', () => {
+      if (!video.muted) {
+        volumeSlider.value = video.volume;
+      } else {
+        volumeSlider.value = 1;
+      }
+      updateVolumeIcon();
+    });
+
+    // Update volume icon
+    function updateVolumeIcon() {
+      if (video.muted || video.volume === 0) {
+        volumeBtn.textContent = '🔈'; // muted
+      } else if (video.volume < 0.5) {
+        volumeBtn.textContent = '🔉'; // low volume
+      } else {
+        volumeBtn.textContent = '🔊'; // high volume
+      }
+    }
+
+    updateVolumeIcon(); // Initialize icon on load
+
+    // Auto-hide controls after 2s of inactivity
+    function startHideControlsTimer() {
+      clearTimeout(hideControlsTimeout);
+      hideControlsTimeout = setTimeout(() => {
+        videoControls.classList.add('hidden');
+      }, 2000);
+    }
+
+    function showControls() {
+      videoControls.classList.remove('hidden');
+    }
+
+    videoWrapper.addEventListener('mousemove', () => {
+      showControls();
+      startHideControlsTimer();
+    });
+
+    videoWrapper.addEventListener('touchstart', () => {
+      showControls();
+      startHideControlsTimer();
+    });
+
+    document.addEventListener('fullscreenchange', () => {
+      showControls();
+      clearTimeout(hideControlsTimeout);
+      startHideControlsTimer();
+    });
+
+    // Theme toggle logic
     function toggleTheme() {
       const isLight = document.body.classList.toggle('light');
       localStorage.setItem('theme', isLight ? 'light' : 'dark');
@@ -197,48 +420,34 @@
     function updateThemeIcon() {
       const isLight = document.body.classList.contains('light');
       themeBtn.textContent = isLight ? '☀️' : '🌙';
-    }
+}
 
-    function applyStoredTheme() {
-      const saved = localStorage.getItem('theme');
-      if (saved === 'light') {
-        document.body.classList.add('light');
-      } else if (!saved) {
-        // If not set, follow system preference
-        if (window.matchMedia('(prefers-color-scheme: light)').matches) {
-          document.body.classList.add('light');
-        }
-      }
-      updateThemeIcon();
-    }
+function loadTheme() {
+  const savedTheme = localStorage.getItem('theme');
+  if (savedTheme === 'light') {
+    document.body.classList.add('light');
+  }
+  updateThemeIcon();
+}
 
-    function disableKeys(e) {
-      if (
-        e.key === "F12" ||
-        (e.ctrlKey && e.shiftKey && ["I", "J"].includes(e.key)) ||
-        (e.ctrlKey && e.key === "U")
-      ) {
-        return false;
-      }
-    }
+function disableKeys(e) {
+  return ['F12', 'I', 'J', 'U', 'S', 'C'].includes(e.key.toUpperCase()) && (e.ctrlKey || e.metaKey) ? false : true;
+}
 
-    function init() {
-      sbsStreams.forEach((stream, index) => {
-        const option = document.createElement('option');
-        option.value = index;
-        option.textContent = stream.label;
-        serverSelect.appendChild(option);
-      });
+loadTheme();
 
-      serverSelect.addEventListener('change', () => {
-        loadStream(parseInt(serverSelect.value));
-      });
+// Load servers on start
+sbsStreams.forEach((s, i) => {
+  const opt = document.createElement('option');
+  opt.value = i;
+  opt.text = s.label;
+  serverSelect.appendChild(opt);
+});
 
-      loadStream(0);
-      applyStoredTheme();
-    }
+serverSelect.onchange = () => loadStream(serverSelect.value);
+serverSelect.value = 0;
+loadStream(0); // Load default stream
 
-    window.onload = init;
-  </script>
-</body>
+</script>
+</body> 
 </html>
