--- a/index.html
+++ b/index.html
@@ -134,63 +134,63 @@
   <h1>Real Time</h1>
 
   <div class="button-container">
-    <a href="https://kbs.co.kr/kbs1" target="_blank" rel="noopener noreferrer">
+    <a href="kbs1.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/KBS1_logo.svg/80px-KBS1_logo.svg.png" alt="KBS1 Logo" />
+        <img src="https://assets.onecompiler.app/432zqmf3k/43j55rutb/Screenshot%202025-05-19%20010436.png" alt="KBS1 Logo" />
         KBS1
       </button>
     </a>
 
-    <a href="https://kbs.co.kr/kbs2" target="_blank" rel="noopener noreferrer">
+    <a href="kbs2.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/KBS2_logo.svg/80px-KBS2_logo.svg.png" alt="KBS2 Logo" />
+        <img src="https://assets.onecompiler.app/432zqmf3k/43j55rutb/Screenshot%202025-05-19%20010444.png" alt="KBS2 Logo" />
         KBS2
       </button>
     </a>
 
-    <a href="https://mbc.co.kr" target="_blank" rel="noopener noreferrer">
+    <a href="mbc.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/MBC_Logo.svg/80px-MBC_Logo.svg.png" alt="MBC Logo" />
+        <img src="https://assets.onecompiler.app/432zqmf3k/43j55rutb/Screenshot%202025-05-19%20010449.png" alt="MBC Logo" />
         MBC
       </button>
     </a>
 
     <a href="sbs.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/SBS_logo.svg/80px-SBS_logo.svg.png" alt="SBS Logo" />
+        <img src="https://assets.onecompiler.app/432zqmf3k/43j55rutb/Screenshot%202025-05-19%20010458.png" alt="SBS Logo" />
         SBS
       </button>
     </a>
 
-    <a href="https://jtbc.co.kr" target="_blank" rel="noopener noreferrer">
+    <a href="jtbc.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/JTBC_logo.svg/80px-JTBC_logo.svg.png" alt="JTBC Logo" />
         JTBC
       </button>
     </a>
 
-    <a href="https://www.ichannela.com" target="_blank" rel="noopener noreferrer">
+    <a href="channel.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Channel_A_logo.svg/80px-Channel_A_logo.svg.png" alt="CHANNEL A Logo" />
         CHANNELA
       </button>
     </a>
 
-    <a href="https://tvn.cjenm.com" target="_blank" rel="noopener noreferrer">
+    <a href="tvn.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/TvN_logo.svg/80px-TvN_logo.svg.png" alt="tvN Logo" />
         TVN
       </button>
     </a>
 
-    <a href="https://mnet.interest.me" target="_blank" rel="noopener noreferrer">
+    <a href="mnet.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Mnet_logo.svg/80px-Mnet_logo.svg.png" alt="MNET Logo" />
         MNET
       </button>
     </a>
 
-    <a href="https://sbsplus.co.kr" target="_blank" rel="noopener noreferrer">
+    <a href="sbsplus.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/SBS_logo.svg/80px-SBS_logo.svg.png" alt="SBS PLUS Logo" />
         SBS PLUS
