--- a/sbs.html
+++ b/sbs.html
@@ -243,7 +243,7 @@
     const sbsStreams = [
       { label: "SBS Server 1", url: "https://live-edge-th136.myjktv.com/playlist/live.m3u8?sid=5l06ZlczkM5auWl6WPOYHOkc7N6hCwVbD2V6GYfF&secret=931fce268414465b0297796bda52ed1a&time=1747622645" },
       { label: "SBS Server 2", url: "https://live-edge-th136.myjktv.com/playlist/live.m3u8?sid=1CzOKfV07EF3LK1PhN2LdZyeShayDQZb0Hgc6GH1&secret=53eae1db7b194654d2c29045425e3274&time=1747622556" },
-      { label: "SBS Server 3", url: "https://stream1.knn.co.kr/hls/9ly4534y7dm2xfa123r2_tv/index.m3u8" },
+      { label: "SBS Server 3", url: "https://live-114.myjktv.com/playlist/live.m3u8?sid=PvaPzNlsZnDLmkNXb8EAiV5QZug8ew2a8uG6XQnn&secret=f9f11656b4431f8b921166dc71a35958&time=1747622703" },
       { label: "SBS Server 4", url: "https://media.jibs.co.kr/stream/1_2000_126844/index.m3u8" },
       { label: "SBS Server 5", url: "https://stream1.knn.co.kr/hls/9ly4534y7dm2xfa123r2_tv/index.m3u8" }
       
