--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </button>
     </a>
 
-    <a href="tvn.html" target="_blank" rel="noopener noreferrer">
+    <a href="tvN.html" target="_blank" rel="noopener noreferrer">
       <button class="channel-button">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/TvN_logo.svg/80px-TvN_logo.svg.png" alt="tvN Logo" />
         TVN
