--- a/kbs1.html
+++ b/kbs1.html
@@ -516,7 +516,7 @@
 
     // Event listeners
     playPauseBtn.addEventListener('click', togglePlayPause);
-    video.addEventListener('click', togglePlayPause);
+    video.addEventListener('click', showControls);
     volumeBtn.addEventListener('click', toggleMute);
     volumeSlider.addEventListener('input', changeVolume);
     progressBar.addEventListener('input', seek);
