--- a/sbs.html
+++ b/sbs.html
@@ -295,7 +295,7 @@
 <body oncontextmenu="return false" onkeydown="return disableKeys(event)" ondragstart="return false">
   <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
-  <h1>tvN Live Stream</h1>
+  <h1>SBS Live Stream</h1>
 
   <div class="video-wrapper" id="videoWrapper">
     <video id="video" autoplay muted playsinline></video>
@@ -353,9 +353,9 @@
     let lastVolume = 1;
 
     const sbsStreams = [
-      { label: "SBS Server 1", url: "https://live-edge-th136.myjktv.com/playlist/live.m3u8?sid=baB0UOPfTkbwz09GlrDfx91TxLGiB6WvegCd5zBp&secret=709bcb6a2ece32dd82def8bcb8e554da&time=1747633594" },
-      { label: "SBS Server 2", url: "https://live-114.myjktv.com/playlist/live.m3u8?sid=3d0UCXNkWcqUjcwNNxnFIhRMVb4Cp7IVCf1RR6r7&secret=54c8acbf6990cba327821a5c1891f836&time=1747633648" },
-      { label: "SBS Server 3", url: "https://live-114.myjktv.com/playlist/live.m3u8?sid=dpK9GSBZlv98kFytOiQG9AM1uMzREg5EHRnSXMQf&secret=a62529fec336a00043bbd6ce9a06c9a8&time=1747633724" },
+      { label: "SBS Server 1", url: "https://live-114.myjktv.com/playlist/live.m3u8?sid=TNJK51vcs6oudNIPypOgLgO9UAESrXNsYWPOv0eC&secret=12c236ce86e25418256a095440f969b5&time=1747637568" },
+      { label: "SBS Server 2", url: "https://live-edge-th136.myjktv.com/playlist/live.m3u8?sid=vWZ3d4n8aHZbyZ3r6nNyP1Mo54qsPKozVZiwGoXs&secret=840379d2ac9a7cd0fe5fb794d3fe98e5&time=1747637595" },
+      { label: "SBS Server 3", url: "https://live-114.myjktv.com/playlist/live.m3u8?sid=hkJSie8lwK5iraQoKEa9VM7WMmrggQ5z8zhm8xlb&secret=a90bbb5e8a80181f267d8d7734d9ccd4&time=1747637647" },
       { label: "SBS Server 4", url: "https://media.jibs.co.kr/stream/1_2000_126844/index.m3u8" },
       { label: "SBS Server 5", url: "https://stream.ubc.co.kr/hls/ubctvstream/1_2/index.m3u8" },
       { label: "SBS Server 6", url: "https://jtvonair.sbsoft.net/jtv_live/myStream/chunklist_w1621730459.m3u8" },
