--- a/mnet.html
+++ b/mnet.html
@@ -294,7 +294,7 @@
 <body oncontextmenu="return false" onkeydown="return disableKeys(event)" ondragstart="return false">
   <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
-  <h1>tvN Live Stream</h1>
+  <h1>MNET Live Stream</h1>
 
   <div class="video-wrapper" id="videoWrapper">
     <video id="video" autoplay muted playsinline></video>
